Complete readme file and index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,7 @@
               </div>
               <div class="content">
                 <h3>Why Vietnam?</h3>
-                <p>In 2007, John visited Ho Chi Minh city - Vietnam and was impressed by local cuisine and hospitable people.</p>
+                <p>In 2007, John visited Ho Chi Minh city - Vietnam for the first time and was impressed by local cuisine and hospitable people.</p>
               </div>
             </div>
             <div class="swiper-slide">
